# ha-dominion-energy

./: .pre-commit-config.yaml  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
custom_components/dominion_energy/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  rates.py  sensor.py  strings.json
docs/: bill-calculator-worksheet-va.xlsx
tests/: test_rates.py
