[project]
name = "ha-dominion-energy"
version = "1.3.0"
description = "Home Assistant custom integration for Dominion Energy"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
